app/home.css
/* Layout for home page */
#home {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: start;
    padding-left: 5vw;
    padding-right: 5vw;
}

#home p {
    font-weight: 500;
    color: var(--white);
    font-size: clamp(30px, 5vw, 5vw);
}

#home footer {
    font-style: italic;
    color: var(--yellow);
    font-size: clamp(14px, 1vw, 1vw);
    opacity: 0;
    margin-top: 10px;
    animation-name: slideIn;
    animation-fill-mode: forwards;
    animation-delay: 3s;
    animation-duration: 1.2s;
}

#home #previousWork {
    border: 1px solid var(--yellow);
    width: max-content;
    padding: 10px;
    margin-top: 24px;
    font-size: clamp(16px, 1.5vw, 1.5vw);
    background-image: linear-gradient(var(--yellow), var(--yellow));
    background-repeat: no-repeat;
    background-position-x: 100%;
    background-size: 0% 100%;
    transition: background-size 0.5s;
    color: var(--yellow);
    text-decoration: none;
    opacity: 0;
    animation-name: slideIn;
    animation-fill-mode: forwards;
    animation-delay: 3s;
    animation-duration: 1.2s;
}

#home #previousWork:hover {
    color: var(--white);
    background-position-x: 0%;
    background-size: 100% 100%;
}

#home #name {
    font-weight: 500;
    font-size: clamp(30px, 5vw, 5vw);
    color: var(--yellow);
}

#home .typewriter {
    min-height: clamp(30px, 5vw, 5vw);
    overflow: hidden;
    white-space: nowrap;
    max-width: max-content;
    width: 0%;
}

#home #firstSentence {
    animation: showText 3s steps(30, end) forwards, blink 0.5s step-end 2;
}

#home #secondSentence {
    animation: showText 3s steps(30, end) forwards, blink 0.6s step-end 2;
    animation-delay: 0.8s;
}

#home #thirdSentence {
    animation: showText 2s steps(30, end) forwards, blink 0.7s step-end 4.5;
    animation-delay: 2s;
}

@keyframes showText {
    0% {
        width: 0%;
    }

    100% {
        width: 100%;
    }
}

@keyframes blink {

    0%,
    100% {
        border-right: 3px solid transparent;
    }

    50% {
        border-right: 3px solid var(--yellow);
    }
}

@keyframes slideIn {
    0% {
        opacity: 0;
        transform: translateY(200px);
    }

    100% {
        opacity: 1;
        transform: translateY(0px);
    }
}

